# Object-C

./: CMakeLists.txt  GNUstepModule.cmake
c++/inc/: lib.hpp
c++/src/: lib.cpp
c/inc/: lib.h
c/src/: lib.c
object-c/inc/: AObjcClass.h
object-c/src/: AObjcClass.mm  test-objc.m
